fix: fixed text overflow

--- a/src/components/Task/task.css
+++ b/src/components/Task/task.css
@@ -8,7 +8,6 @@
     flex-grow: 0;
     justify-content: space-between;
     height: 100px;
-    overflow-y: scroll;
     margin-block: 8px;
 }
 
@@ -24,6 +23,10 @@
 .taskBody {
     margin: 0px;
     font-size: 24px;
+    max-width: 100vw;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .taskId {
